fix gap & line height

--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "Poppins-ExtraLight";
-  src: url(/fonts/Poppins-ExtraLight.ttf) format("truetype");
+  src: url(../../fonts/Poppins-ExtraLight.ttf) format("truetype");
   font-weight: 200;
 }
 @font-face {
   font-family: "Poppins-Regular";
-  src: url(/fonts/Poppins-Regular.ttf) format("truetype");
+  src: url(../../fonts/Poppins-Regular.ttf) format("truetype");
   font-weight: 400;
 }
 @font-face {
   font-family: "Poppins-SemiBold";
-  src: url(/fonts/Poppins-SemiBold.ttf) format("truetype");
+  src: url(../../fonts/Poppins-SemiBold.ttf) format("truetype");
   font-weight: 600;
 }
 body {
@@ -18,6 +18,15 @@ body {
   line-height: 2;
   font-family: "Poppins-Regular", sans-serif;
   color: hsl(234, 12%, 34%);
+}
+
+.title {
+  line-height: normal;
+}
+
+.title,
+a {
+  text-align: center;
 }
 
 h1,
@@ -31,7 +40,7 @@ h1 {
 }
 
 h2 {
-  font-weight: 600;
+  font-family: "Poppins-SemiBold", sans-serif;
 }
 
 p {
@@ -40,11 +49,6 @@ p {
 
 a {
   text-decoration: none;
-}
-
-.title,
-a {
-  text-align: center;
 }
 
 .cards__card h3 {
@@ -88,7 +92,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
+  gap: 3rem;
 }
 
 .title {
